--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "graphql-mysql-api",
+  "name": "graphql-athena-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js"
   },
   "dependencies": {
     "@aws-sdk/client-athena": "^3.828.0",
+    "@aws-sdk/client-s3": "^3.828.0",          // Athena-Express usa S3 internamente
     "apollo-server-express": "^3.12.0",
-    "athena-express": "^6.0.4",
-    "aws-sdk": "^2.1692.0",
+    "athena-express": "^8.0.0",                // ← versión 8 ó superior
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "graphql": "^16.6.0",
-    "sequelize": "^6.32.0",
-    "wait-port": "^0.2.9"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module"
+    "graphql": "^16.6.0"
+  }
 }
