Fix Service Deploy

--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "graphql-athena-api",
   "version": "1.0.0",
-  "description": "",
   "type": "module",
   "main": "src/index.js",
-  "scripts": {
-    "start": "node src/index.js"
-  },
+  "scripts": { "start": "node src/index.js" },
   "dependencies": {
-    "@aws-sdk/client-athena": "^3.828.0",
-    "@aws-sdk/client-s3": "^3.828.0",
+    "aws-sdk": "^2.1692.0",
     "apollo-server-express": "^3.12.0",
-    "athena-express": "^8.0.0",
+    "athena-express": "^6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0"
