--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "graphql-athena-api",
   "version": "1.0.0",
-  "description": "",
   "type": "module",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "node src/index.js"
-  },
+  "scripts": { "start": "node src/index.js" },
   "dependencies": {
+    "@aws-sdk/client-athena": "^3.828.0",
+    "athena-express": "^6.0.4",
     "aws-sdk": "^2.1692.0",
-    "athena-express": "^5.1.14",
     "apollo-server-express": "^3.12.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "wait-port": "^0.2.9"
   }
 }
